# reporthelper

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  GITHUB_SECRETS_QUICK_SETUP.md  Makefile  README.md  env.example  manage.py  models.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.sh  start.bat  start.sh  start_simple.ps1
.github/workflows/: ai_reporter.yaml
ai_report_writer/: ai_utils.py  asgi.py  model_config.py  settings.py  urls.py  wsgi.py
breakdown/: ai_breakdown.py  consumers.py  models.py  routing.py  serializers.py  test_full_system.py  urls.py  utils.py  views.py
breakdown/migrations/: 0001_initial.py  0002_document_ai_model_used_document_document_type_and_more.py  0003_breakdown_step_by_step_content_and_more.py  0004_document_extraction_map.py  0005_section.py  0006_breakdown_document_summary_section_short_summary.py  0007_howto.py  0008_qaentry.py  0009_revision.py  0010_add_annotation_model.py
breakdown_review/: apps.py  urls.py
comparison_ai/: admin.py  apps.py  models.py  urls.py  views.py
creation/: urls.py
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  DOCUMENT_GENERATION_README.md  GETTING_STARTED.md  GITHUB_SECRETS_SETUP.md  GITHUB_WORKFLOW.md  MODEL_MANAGEMENT_README.md  OPENROUTE_SETUP.md  README.md  SCRIPTS.md  SECURITY.md  SECURITY_AUDIT.md  UPDATE_SUMMARY.md  WINDOWS_SETUP.md
java_assets/: DocumentGenerator.java  README.md  build.bat  pom.xml
prompts/: breakdown_prompts.py  step_by_step_prompt.txt
scripts/: README.md  backup.sh  check_status.sh  format_code.py  generate_secret_key.py  start.bat  start_django.sh  start_llmstudio.sh  start_simple.ps1  status.sh  switch_model.py  test_lmstudio.sh  test_lmstudio_integration.py  update.sh
templates/: base.html  customai.html
user_review/: urls.py
(+15 files in other folders)
